# FFmpegDemo

./: .gitignore
app/: build.gradle
app/src/androidTest/java/com/ffmpeg/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/libfaac/: faac.h  faaccfg.h
app/src/main/cpp/include/libx264/: x264.h
app/src/main/java/com/ffmpeg/demo/: Main.java  MainActivity.java  VPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ffmpeg/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
